Updated resolver mechanism to read versions.properties from sos-env.jar, updated configs to reflect new resolver mechanism in sos-tests
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@321 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-sorcer.config
+++ b/iGrid/configs/boot-sorcer.config
@@ -5,7 +5,7 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 
-import sorcer.util.ArtifactCoordinates;
+import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 
 // Phoenix activation service
@@ -62,46 +62,46 @@ com.sun.jini.start {
 */
 
 	    new SorcerServiceDescriptor(
-	      	""+new ArtifactCoordinates("org.apache.river","reggie-dl"),
+	      	""+Resolver.resolveRelative("org.apache.river:reggie-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","reggie"),
+            Resolver.resolveAbsolute("org.apache.river:reggie"),
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}reggie.config" }),
             
 		new SorcerServiceDescriptor(
-	    	""+new ArtifactCoordinates("org.apache.river","mahalo-dl"),
+	    	""+Resolver.resolveRelative("org.apache.river:mahalo-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","mahalo"),
+            Resolver.resolveAbsolute("org.apache.river:mahalo"),
             "com.sun.jini.mahalo.TransientMahaloImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mahalo.config" }),
 
 
        new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","fiddler-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:fiddler-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","fiddler"),
+            Resolver.resolveAbsolute("org.apache.river:fiddler"),
            "com.sun.jini.fiddler.TransientFiddlerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}fiddler.config" }),
 
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","mercury-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:mercury-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","mercury"),
+            Resolver.resolveAbsolute("org.apache.river:mercury"),
             "com.sun.jini.mercury.TransientMercuryImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mercury.config" }),
 
 
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","norm-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:norm-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","norm"),
+            Resolver.resolveAbsolute("org.apache.river:norm"),
             "com.sun.jini.norm.TransientNormServerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}norm.config" }),
             
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","outrigger-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:outrigger-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","outrigger"),
+            Resolver.resolveAbsolute("org.apache.river:outrigger"),
             "com.sun.jini.outrigger.TransientOutriggerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
             
@@ -109,15 +109,16 @@ com.sun.jini.start {
    		// Blitz
 
         new SorcerServiceDescriptor(
- 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl")+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui"),
+ 			Resolver.resolveRelative("org.dancres.blitz:blitz-dl") +
+ 			" " + Resolver.resolveRelative("org.dancres.blitz:blitzui"),
             policy, 
             ConfigUtil.concat(new Object[] {
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz"), ps,
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui"), ps,
-            	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
-            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui"), ps,
-            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl"), ps,
-            	repo, new ArtifactCoordinates("net.jini","jsk-platform")
+            	Resolver.resolveAbsolute("org.dancres.blitz:blitz"), ps,
+            	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
+            	Resolver.resolveAbsolute("com.sleepycat:je:4.1.21"), ps,
+            	Resolver.resolveAbsolute("net.jini.lookup:serviceui"), ps,
+            	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
+            	Resolver.resolveAbsolute("net.jini:jsk-platform")
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
