--- a/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
@@ -4,7 +4,7 @@ import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.util.ArtifactCoordinates;
+import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 	
 com.sun.jini.start {
@@ -38,12 +38,12 @@ com.sun.jini.start {
                                                          }),
 
 	new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-api")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
 			policy,
 			ConfigUtil.concat(new Object[] {
-			    repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-api"), ps,
-			    repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-prv"), ps,
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
@@ -51,12 +51,12 @@ com.sun.jini.start {
         ),
 
 	new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-api")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
 			policy,
 			ConfigUtil.concat(new Object[] {
-			    repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-api"), ps,
-			    repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-prv"), ps,
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
@@ -64,12 +64,12 @@ com.sun.jini.start {
        ),
           	
        new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-api")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
 			policy,
 			ConfigUtil.concat(new Object[] {
-			    repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-api"), ps,
-			    repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-prv"), ps,
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
@@ -77,12 +77,12 @@ com.sun.jini.start {
 	   ),
 
        new SorcerServiceDescriptor(
-		      ""+new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-api")
-				  +" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform"),
+		      ""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
+				  +" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
 		      policy,
 		      ConfigUtil.concat(new Object[] {
-			  repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-api"), ps,
-			  repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ju-arithmetic-prv"), ps,
+			  Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
+			  Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
 			  runtimeClasspath
 		      }),
 		      "sorcer.core.provider.ServiceTasker",
