--- a/iGrid/configs/boot-sorcer-min.config
+++ b/iGrid/configs/boot-sorcer-min.config
@@ -5,7 +5,7 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 
-import sorcer.util.ArtifactCoordinates;
+import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 
 // Phoenix activation service
@@ -38,7 +38,7 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up 10 directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
-        /*SorcerDescriptorUtil.getWebster(policy,
+        SorcerDescriptorUtil.getWebster(policy,
                                          port,
                                          new String[] { 
                                                         jiniLibPath,
@@ -51,7 +51,7 @@ com.sun.jini.start {
                                          endPort,
                                          true,
                                          false),
-                                         */
+
 
 /*
         new SorcerServiceDescriptor(
@@ -63,65 +63,68 @@ com.sun.jini.start {
 */
 
 	    new SorcerServiceDescriptor(
-	      	""+new ArtifactCoordinates("org.apache.river","reggie-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:reggie-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","reggie"),
+            Resolver.resolveAbsolute("org.apache.river:reggie"),
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}reggie.config" }),
-            
-/*		new SorcerServiceDescriptor(
-	    	""+new ArtifactCoordinates("org.apache.river","mahalo-dl"),
+
+		new SorcerServiceDescriptor(
+	    	"" + Resolver.resolveRelative("org.apache.river:mahalo-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","mahalo"),
+            Resolver.resolveAbsolute("org.apache.river:mahalo"),
             "com.sun.jini.mahalo.TransientMahaloImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mahalo.config" }),
-*/
-/*
-       new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","fiddler-dl"),
+
+
+ /*       new SorcerServiceDescriptor(
+	      	"" + Resolver.resolveRelative("org.apache.river:fiddler-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","fiddler"),
+            Resolver.resolveAbsolute("org.apache.river:fiddler"),
            "com.sun.jini.fiddler.TransientFiddlerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}fiddler.config" }),
 
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","mercury-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:mercury-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","mercury"),
+            Resolver.resolveAbsolute("org.apache.river:mercury"),
             "com.sun.jini.mercury.TransientMercuryImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mercury.config" }),
 
 
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","norm-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:norm-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","norm"),
+            Resolver.resolveAbsolute("org.apache.river:norm"),
             "com.sun.jini.norm.TransientNormServerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}norm.config" }),
-            
+
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","outrigger-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:outrigger-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","outrigger"),
+            Resolver.resolveAbsolute("org.apache.river:outrigger"),
             "com.sun.jini.outrigger.TransientOutriggerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
-*/
 
+   */
    		// Blitz
 
         new SorcerServiceDescriptor(
- 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl")+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui"),
-            policy, 
+ 			"" + Resolver.resolveRelative("org.dancres.blitz:blitz-dl") +
+ 			" " + Resolver.resolveRelative("org.dancres.blitz:blitzui"),
+            policy,
             ConfigUtil.concat(new Object[] {
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz"), ps,
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui"), ps,
-            	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
-            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui"), ps,
-            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl"), ps,
-            	repo, new ArtifactCoordinates("net.jini","jsk-platform")
+            	Resolver.resolveAbsolute("org.dancres.blitz:blitz"), ps,
+            	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
+            	Resolver.resolveAbsolute("com.sleepycat:je:4.1.21"), ps,
+            	Resolver.resolveAbsolute("net.jini.lookup:serviceui"), ps,
+            	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
+            	Resolver.resolveAbsolute("net.jini:jsk-platform")
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
+
+
 
 /*
 		// MutualExclusion - Locker
