--- a/iGrid/sos/sos-tests/int-tests/pom.xml
+++ b/iGrid/sos/sos-tests/int-tests/pom.xml
@@ -19,7 +19,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>boot</artifactId>
+			<artifactId>sos-boot</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
