copy first to the archetype as a reference for integration test (currently disabled)
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@323 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/tools/sorcer-provider/pom.xml
+++ b/iGrid/tools/sorcer-provider/pom.xml
@@ -17,6 +17,11 @@
     <description>SORCER provider archetype</description>
     <url>http://sorcersoft.com/</url>
 
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+		<skipTests>true</skipTests>
+	</properties>
+
     <build>
         <extensions>
             <extension>
