--- a/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-req/pom.xml
+++ b/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-req/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>${rootArtifactId}-client</artifactId>
-    <name>SORCER ${rootArtifactId} :: client</name>
+    <artifactId>${rootArtifactId}-req</artifactId>
+    <name>SORCER ${rootArtifactId} :: requestor</name>
 
     <dependencies>
         <dependency>
@@ -17,23 +17,5 @@
             <artifactId>sorcer-api</artifactId>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.7</version>
-
-
-                <configuration>
-                    <target name="${rootArtifactId}">
-			<echo message="BaseDir: ${basedir}"/>
-                        <ant antfile="${basedir}/src/main/scripts/run.xml" target="run.requestor"/>
-                    </target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
