--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/archetype.properties
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/archetype.properties
@@ -1,11 +1,11 @@
 #Wed Mar 20 10:23:05 CET 2013
 #package i groupId powinny się różnić żeby przetestować poprawność zastosowanych zmiennych
-package=com.example.test
-version=1.0.0-SNAPSHOT
+package=org.sorcersoft.sorcer
+version=1.0-SNAPSHOT
 groupId=com.example.sorcer
-artifactId=basic
-providerInterface=SampleService
-providerClass=SampleServiceImpl
+artifactId=first
+providerInterface=HelloWorld
+providerClass=HelloWorldImpl
 projectDescription=Sample Service project description
 serviceName=Sample Service name
 serviceDescription=Sample Service description
