--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-api/pom.xml
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-api/pom.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>${rootArtifactId}-service</artifactId>
-    <name>SORCER ${rootArtifactId} :: service</name>
-    <description>SORCER</description>
-    <url>http://sorcersoft.org/</url>
+    <parent>
+        <artifactId>first</artifactId>
+        <groupId>org.sorcersoft.sorcer</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <artifactId>first-api</artifactId>
+    <name>SORCER examples :: first :: api</name>
 
     <dependencies>
         <dependency>
-            <groupId>${groupId}</groupId>
-            <artifactId>${rootArtifactId}-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
+            <artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
         </dependency>
     </dependencies>
-
 </project>
