--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-sui/pom.xml
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-sui/pom.xml
@@ -3,23 +3,30 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>${rootArtifactId}-ui</artifactId>
-    <name>SORCER ${rootArtifactId} :: ui</name>
+    <parent>
+        <artifactId>first</artifactId>
+        <groupId>org.sorcersoft.sorcer</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <artifactId>first-ui</artifactId>
+    <name>SORCER examples :: first :: service UI</name>
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${rootArtifactId}-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${rootArtifactId}-proxy</artifactId>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>first-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
+            <artifactId>first-proxy</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
         </dependency>
     </dependencies>
 </project>
