updated for handling config files
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@333 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/webster/configs/start-webster.config
+++ b/iGrid/bin/webster/configs/start-webster.config
@@ -8,18 +8,16 @@ import sorcer.provider.boot.SorcerDescriptorUtil;
 import com.sun.jini.start.ServiceDescriptor;
 
 com.sun.jini.start {
- 	sorcerLibPath = "${sorcer.home}${/}lib${/}sorcer${/}lib";
- 	sorcerLibDlPath = "${sorcer.home}${/}lib${/}sorcer${/}lib-dl";
-    jiniLibPath = "${sorcer.home}${/}lib${/}river${/}lib";
-    jiniLibDLPath = "${sorcer.home}${/}lib${/}river${/}lib-dl";
-    rioLibPath = "${sorcer.home}${/}lib${/}rio";
-    engLibPath = "${sorcer.home}${/}lib${/}eng${/}lib";
-    engLibDlPath = "${sorcer.home}${/}lib${/}eng${/}lib-dl";
-    legacyLibPath = "${sorcer.home}${/}lib";   
-    exLibPath="${sorcer.home}${/}lib${/}examples${/}lib";
-    exLibDlPath="${sorcer.home}${/}lib${/}examples${/}lib-dl";
-    dataPath = "${sorcer.home}${/}data";
-    deployPath = "${sorcer.home}${/}deploy";
+ 	sorcerLibPath = "${iGrid.home}${/}lib${/}sorcer${/}lib";
+ 	sorcerLibDlPath = "${iGrid.home}${/}lib${/}sorcer${/}lib-dl";
+    jiniLibPath = "${iGrid.home}${/}lib${/}river${/}lib";
+    jiniLibDLPath = "${iGrid.home}${/}lib${/}river${/}lib-dl";
+    rioLibPath = "${iGrid.home}${/}lib${/}rio";
+    engLibPath = "${iGrid.home}${/}lib${/}eng${/}lib";
+    engLibDlPath = "${iGrid.home}${/}lib${/}eng${/}lib-dl";
+    legacyLibPath = "${iGrid.home}${/}lib";   
+    dataPath = "${iGrid.home}${/}data";
+    deployPath = "${iGrid.home}${/}deploy";
     policy = "${java.security.policy}";
     //provider.webster.port
 	port = Booter.getWebsterPort(); 
@@ -33,23 +31,20 @@ com.sun.jini.start {
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
         SorcerDescriptorUtil.getWebster(policy,
                                          port,
-                                         new String[] { //engLibPath,
-                                                        //engLibDlPath,
+                                         new String[] { engLibPath,
+                                                        engLibDlPath,
                                                         sorcerLibPath,
                                          			    sorcerLibDlPath,
                                          			    jiniLibDLPath,
-                                                        //rioLibPath,
+                                                        rioLibPath,
                                                         jiniLibPath,
                                                         dataPath,
                                                         deployPath,
-                                                        legacyLibPath,
-                                                        exLibPath,
-                                                        exLibDlPath },
+                                                        legacyLibPath },
                                          address,
                                          startPort,
                                          endPort,
                                          true,
-                                         false
-                                         )
+                                         false)
     };
 }  
