Fixed problems with tests after updating webster
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@345 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/webster/configs/start-webster-prv.config
+++ b/iGrid/bin/webster/configs/start-webster-prv.config
@@ -6,20 +6,19 @@ import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import com.sun.jini.config.ConfigUtil;
 import java.io.File;
+import sorcer.resolver.Resolver;
 
 import sorcer.provider.boot.SorcerDescriptorUtil;
 
 com.sun.jini.start {
- 	
-	sorcerLibExtPath = "${iGrid.home}/${/}lib${/}sorcer${/}lib-ext";
-			
+ 			
  	serviceDescriptors = new ServiceDescriptor[] {
     	/* Wester descriptor */
    		new SorcerServiceDescriptor(null, 
    			"${java.security.policy}",
-			sorcerLibExtPath + "${/}webster.jar", 
+			Resolver.resolveAbsolute("org.sorcersoft.sorcer:sos-webster"), 
 			"sorcer.tools.webster.Webster", 
-			new String[] { "${iGrid.home}${/}bin${/}webster${/}configs${/}webster-prv.config" })
+			new String[] { "${sorcer.home}${/}bin${/}webster${/}configs${/}webster-prv.config" })
     };
     
 }//end com.sun.jini.start
