--- a/iGrid/configs/sorcer.env
+++ b/iGrid/configs/sorcer.env
@@ -45,7 +45,7 @@ dataspace.storer.name=Dataspace Storage
 # Code server configuration
 provider.webster.interface=${localhost}
 #webster.interface=10.131.5.101
-webster.port=50001
+provider.webster.port=50001
 
 # Data/file repository configuration
 # Scratch directory format: 
