--- a/iGrid/configs/boot-sorcer.config
+++ b/iGrid/configs/boot-sorcer.config
@@ -38,7 +38,7 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up 10 directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
-        SorcerDescriptorUtil.getWebster(policy,
+        /*SorcerDescriptorUtil.getWebster(policy,
                                          port,
                                          new String[] { 
                                                         jiniLibPath,
@@ -51,7 +51,16 @@ com.sun.jini.start {
                                          endPort,
                                          true,
                                          false),
-
+*/
+  	new SorcerServiceDescriptor(null, 
+   			"${java.security.policy}",
+			Resolver.resolveAbsolute("org.sorcersoft.sorcer:sos-webster"), 
+			"sorcer.tools.webster.Webster", 
+			new String[] { "${sorcer.home}${/}bin${/}webster${/}configs${/}webster-prv.config" })
+	};
+                                         
+                                         
+                                         
 /*
         new SorcerServiceDescriptor(
             "browser-dl.jar jsk-dl.jar",
