--- a/iGrid/examples/ex6/ex6-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/examples/ex6/ex6-prv/src/main/resources/META-INF/sorcer/services.config
@@ -4,7 +4,7 @@ import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.util.ArtifactCoordinates;
+import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 	
 com.sun.jini.start {
@@ -19,7 +19,7 @@ com.sun.jini.start {
     repo = SorcerEnv.getRepoDir() + "/";
 
 	//port = Booter.getWebsterPort(); 
-	port = 0;
+	//port = 0;
 	//address = Booter.getWebsterInterface();
 	//startPort = Booter.getWebsterStartPort();
 	//endPort = Booter.getWebsterEndPort();
@@ -27,56 +27,56 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up root directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-        SorcerDescriptorUtil.getWebster(policy, port,
+      /*  SorcerDescriptorUtil.getWebster(policy, port,
                                          new String[] { repo,
                                          				jiniLibDLPath,
                                                         jiniLibPath,
                                                         deployPath
                                                          }),
-
+        */
   new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
             ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-prv"), ps
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-api"), ps,
+            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
           	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}adder-prv.config" }
         ),
 
 		new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
             ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-prv"), ps
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-api"), ps,
+            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
           	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}multiplier-prv.config" }
        ),
           	
        new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
             ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-prv"), ps
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-api"), ps,
+            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
           	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}divider-prv.config" }
 	   ),
 
        new SorcerServiceDescriptor(
-            ""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
             ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-prv"), ps
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-api"), ps,
+            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
           	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}subtractor-prv.config" }
