--- a/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
@@ -21,8 +21,8 @@ com.sun.jini.start {
 	deployPath 	= home + "${/}deploy";
 	repo 			 = SorcerEnv.getRepoDir() + "/";
 	
-	//port = Booter.getWebsterPort(); 
-	port = 0;
+	port = Booter.getWebsterPort();
+	//port = 0;
 	//address = Booter.getWebsterInterface();
 	//startPort = Booter.getWebsterStartPort();
 	//endPort = Booter.getWebsterEndPort();
@@ -30,12 +30,6 @@ com.sun.jini.start {
 	serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up root directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-	    SorcerDescriptorUtil.getWebster(policy, port,
-                                         new String[] { repo,
-                                         		jiniLibDLPath,
-                                                        jiniLibPath,
-                                                        deployPath
-                                                         }),
 
 	new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
