Fixed problem in boot-sorcer.config
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@348 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-sorcer.config
+++ b/iGrid/configs/boot-sorcer.config
@@ -56,9 +56,7 @@ com.sun.jini.start {
    			"${java.security.policy}",
 			Resolver.resolveAbsolute("org.sorcersoft.sorcer:sos-webster"), 
 			"sorcer.tools.webster.Webster", 
-			new String[] { "${sorcer.home}${/}bin${/}webster${/}configs${/}webster-prv.config" })
-	};
-                                         
+			new String[] { "${sorcer.home}${/}bin${/}webster${/}configs${/}webster-prv.config" }),
                                          
                                          
 /*
