added missing Arithmetic superinterfaces
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@352 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/arithmetic-prv.config
+++ b/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/arithmetic-prv.config
@@ -18,7 +18,11 @@ sorcer.core.provider.ServiceProvider {
 		name = "Arithmetic";
 		description = "Arithmetic - bean provider";
 		location = "AFRL/WPAFB";
-		publishedInterfaces = new Class[] { junit.sorcer.core.provider.Arithmetic.class };
+		publishedInterfaces = new Class[] {
+		    junit.sorcer.core.provider.Arithmetic.class,
+            junit.sorcer.core.provider.Adder.class,
+            junit.sorcer.core.provider.Multiplier.class,
+            junit.sorcer.core.provider.Subtractor.class };
 
 		spaceEnabled = true;
 		
