removed/updated not needed startup script
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@355 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/jini/configs/fiddler.config
+++ b/iGrid/bin/jini/configs/fiddler.config
@@ -7,8 +7,9 @@ import sorcer.provider.boot.Booter;
 import sorcer.util.Sorcer;
 
 com.sun.jini.fiddler {
+    name = Sorcer.getActualName("Lookup Discovery Service");
     initialLookupGroups = Sorcer.getLookupGroups();
     hostName = Booter.getHostName();
-    initialLookupAttributes = new Entry[] { new Name("Lookup Discovery Service"), new Comment(hostName) };
+    initialLookupAttributes = new Entry[] { new Name(name, new Comment(hostName) };
     serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
 }
