--- a/iGrid/bin/jini/configs/mercury.config
+++ b/iGrid/bin/jini/configs/mercury.config
@@ -7,8 +7,11 @@ import sorcer.provider.boot.Booter;
 import sorcer.util.Sorcer;
 
 com.sun.jini.mercury {
+    name = Sorcer.getActualName("Event Mailbox");
     initialLookupGroups = Sorcer.getLookupGroups();
     hostName = Booter.getHostName();
-    initialLookupAttributes = new Entry[] { new Name("Event Mailbox"), new Comment(hostName) };
+    initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+     //initialLookupLocators
+     //initialUnicastDiscoveryPort
 }
