--- a/iGrid/bin/jini/configs/norm.config
+++ b/iGrid/bin/jini/configs/norm.config
@@ -7,8 +7,11 @@ import sorcer.provider.boot.Booter;
 import sorcer.util.Sorcer;
 
 com.sun.jini.norm {
+    name = Sorcer.getActualName("Lease Renewal Service");
     initialLookupGroups = Sorcer.getLookupGroups();
     hostName = Booter.getHostName();
-    initialLookupAttributes = new Entry[] { new Name("Lease Renewal Service"), new Comment(hostName) };
+    initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    /initialLookupLocators
+   //initialUnicastDiscoveryPort
 }
