--- a/iGrid/configs/boot-sorcer.config
+++ b/iGrid/configs/boot-sorcer.config
@@ -36,23 +36,9 @@ com.sun.jini.start {
     repo = SorcerEnv.getRepoDir() + "/";
     
     serviceDescriptors = new ServiceDescriptor[] {
-        /* SORCER Webster, set to serve up 10 directories */
-        // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
-        /*SorcerDescriptorUtil.getWebster(policy,
-                                         port,
-                                         new String[] { 
-                                                        jiniLibPath,
-                                                        httpData,
-                                                        deployPath,
-                                                        repo
-                                                        },
-                                         address,
-                                         startPort,
-                                         endPort,
-                                         true,
-                                         false),
-*/
-  	new SorcerServiceDescriptor(null, 
+        /* SORCER Webster, set to serve up lib directories */
+
+  	    new SorcerServiceDescriptor(null,
    			"${java.security.policy}",
 			Resolver.resolveAbsolute("org.sorcersoft.sorcer:sos-webster"), 
 			"sorcer.tools.webster.Webster", 
