--- a/iGrid/tools/sos-boot/pom.xml
+++ b/iGrid/tools/sos-boot/pom.xml
@@ -39,6 +39,13 @@
             <groupId>org.rioproject</groupId>
             <artifactId>rio-start</artifactId>
 			<version>${v.rio}</version>
+			<exclusions>
+				<!-- use org.apache.river:start:${v.jini} instead -->
+				<exclusion>
+					<groupId>net.jini</groupId>
+					<artifactId>start</artifactId>
+				</exclusion>
+			</exclusions>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -77,6 +84,11 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.11</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
 		</dependency>
 
 	</dependencies>
