switch use of ArtifactCoordinates to Resolver
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@360 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/services.config
@@ -4,8 +4,9 @@ import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.util.ArtifactCoordinates;
 import sorcer.core.SorcerEnv;
+import sorcer.resolver.Resolver;
+import sorcer.util.Artifact;
 
 com.sun.jini.start {
 	home = "${sorcer.home}";
@@ -33,24 +34,16 @@ com.sun.jini.start {
                                                         }
                                          ),
         new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform","11.1"),
+ 			Resolver.resolveCodebase(Artifact.sorcer("ex1-api"), Artifact.sorcer("sos-platform")),
             policy,
-            ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-prv","11.1"), ps
-            }),
+            Resolver.resolveAbsolute(Artifact.sorcer("ex1-api"), Artifact.sorcer("ex1-prv")),
 	        "sorcer.ex1.provider.WhoIsItProvider1",
           	new String[] { home + "/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt1-prv.config" }
         ),
         new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform","11.1"),
+ 			Resolver.resolveCodebase(Artifact.sorcer("ex1-api"), Artifact.sorcer("sos-platform")),
             policy,
-            ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-prv","11.1"), ps
-            }),
+            Resolver.resolveAbsolute(Artifact.sorcer("ex1-api"), Artifact.sorcer("ex1-prv")),
 	        "sorcer.ex1.provider.WhoIsItProvider2",
           	new String[] { home + "/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt2-prv.config" }
         )
