--- a/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/META-INF/sorcer/services.config
@@ -26,14 +26,9 @@ com.sun.jini.start {
 							      jiniLibPath,
 							      }),
 
-	      new SorcerServiceDescriptor(
-			      ""+new ArtifactCoordinates("${groupId}","${rootArtifactId}-api","${version}")
-			      +" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
-		  policy,
-		  ConfigUtil.concat(new Object[] {
-		      repo, new ArtifactCoordinates("${groupId}","${rootArtifactId}-api","${version}"), ps,
-		      repo, new ArtifactCoordinates("${groupId}","${rootArtifactId}-service","${version}"), ps
-		  }),
+	          ${provider.codebase},
+		  	  policy,
+		      ${provider.classpath},
 		      "sorcer.core.provider.ServiceTasker",
 		      new String[] { "classpath:/META-INF/sorcer/${providerInterface}.config" }
 	      )
