cleanup with SORCER startup scripts
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@365 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-sorcer.config
+++ b/iGrid/configs/boot-sorcer.config
@@ -26,25 +26,8 @@ com.sun.jini.start {
     jiniLibDLPath    = home + "${/}lib${/}river${/}lib-dl";
     deployPath 		 = home + "${/}deploy";
     httpData 		 = home + "${/}data";
-     
-    port = Booter.getWebsterPort(); 
-    //port = 0;
-    address = Booter.getWebsterInterface();
-    startPort = Booter.getWebsterStartPort();
-    endPort = Booter.getWebsterEndPort();
-	
-    repo = SorcerEnv.getRepoDir() + "/";
-    
-    serviceDescriptors = new ServiceDescriptor[] {
-        /* SORCER Webster, set to serve up lib directories */
 
-  	    new SorcerServiceDescriptor(null,
-   			"${java.security.policy}",
-			Resolver.resolveAbsolute("org.sorcersoft.sorcer:sos-webster"), 
-			"sorcer.tools.webster.Webster", 
-			new String[] { "${sorcer.home}${/}bin${/}webster${/}configs${/}webster-prv.config" }),
-                                         
-                                         
+    serviceDescriptors = new ServiceDescriptor[] {
 /*
         new SorcerServiceDescriptor(
             "browser-dl.jar jsk-dl.jar",
@@ -55,21 +38,21 @@ com.sun.jini.start {
 */
 
 	    new SorcerServiceDescriptor(
-	      	""+Resolver.resolveRelative("org.apache.river:reggie-dl"),
+	      	"" + Resolver.resolveRelative("org.apache.river:reggie-dl"),
             policy,
             Resolver.resolveAbsolute("org.apache.river:reggie"),
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}reggie.config" }),
-            
+
 		new SorcerServiceDescriptor(
-	    	""+Resolver.resolveRelative("org.apache.river:mahalo-dl"),
+	    	"" + Resolver.resolveRelative("org.apache.river:mahalo-dl"),
             policy,
             Resolver.resolveAbsolute("org.apache.river:mahalo"),
             "com.sun.jini.mahalo.TransientMahaloImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mahalo.config" }),
 
 
-       new SorcerServiceDescriptor(
+ /*       new SorcerServiceDescriptor(
 	      	"" + Resolver.resolveRelative("org.apache.river:fiddler-dl"),
             policy,
             Resolver.resolveAbsolute("org.apache.river:fiddler"),
@@ -90,21 +73,21 @@ com.sun.jini.start {
             Resolver.resolveAbsolute("org.apache.river:norm"),
             "com.sun.jini.norm.TransientNormServerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}norm.config" }),
-            
+
         new SorcerServiceDescriptor(
 	      	"" + Resolver.resolveRelative("org.apache.river:outrigger-dl"),
             policy,
             Resolver.resolveAbsolute("org.apache.river:outrigger"),
             "com.sun.jini.outrigger.TransientOutriggerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
-            
 
+   */
    		// Blitz
 
         new SorcerServiceDescriptor(
- 			Resolver.resolveRelative("org.dancres.blitz:blitz-dl") +
+ 			"" + Resolver.resolveRelative("org.dancres.blitz:blitz-dl") +
  			" " + Resolver.resolveRelative("org.dancres.blitz:blitzui"),
-            policy, 
+            policy,
             ConfigUtil.concat(new Object[] {
             	Resolver.resolveAbsolute("org.dancres.blitz:blitz"), ps,
             	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
@@ -115,6 +98,8 @@ com.sun.jini.start {
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
+
+
 
 /*
 		// MutualExclusion - Locker
