make dependencies a pom project again
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@368 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/tools/dependencies/pom.xml
+++ b/iGrid/tools/dependencies/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>dependencies</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<name>SORCER tools :: dependencies</name>
 	<description>SORCER dummy module that downloads libraries required at runtime and installs them in the local maven repository</description>
 	<url>http://sorcersoft.org/</url>
