fix version resolver
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@369 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/jini/configs/fiddler.config
+++ b/iGrid/bin/jini/configs/fiddler.config
@@ -10,6 +10,6 @@ com.sun.jini.fiddler {
     name = Sorcer.getActualName("Lookup Discovery Service");
     initialLookupGroups = Sorcer.getLookupGroups();
     hostName = Booter.getHostName();
-    initialLookupAttributes = new Entry[] { new Name(name, new Comment(hostName) };
+    initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
 }
