--- a/iGrid/bin/jini/configs/norm.config
+++ b/iGrid/bin/jini/configs/norm.config
@@ -12,6 +12,6 @@ com.sun.jini.norm {
     hostName = Booter.getHostName();
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
-    /initialLookupLocators
+   //initialLookupLocators
    //initialUnicastDiscoveryPort
 }
