update the 'first' example for the archetype
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@373 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/examples/first/first-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/examples/first/first-prv/src/main/resources/META-INF/sorcer/services.config
@@ -1,29 +1,40 @@
 import java.net.URL;
 import com.sun.jini.start.ServiceDescriptor;
-import com.sun.jini.config.ConfigUtil;
-import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.core.SorcerEnv;
+import sorcer.resolver.Resolver;
+import sorcer.util.Artifact;
+import sorcer.util.ArtifactCoordinates;
 
 com.sun.jini.start {
 	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
 	ps = System.getProperty("path.separator");
-	
-	port = 0;
-	
-	serviceDescriptors = new ServiceDescriptor[] {
-	      /* SORCER Webster, set to serve up root directories */
-	      // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-	      SorcerDescriptorUtil.getWebster(policy, port, new String[] { SorcerEnv.getRepoDir() }),
 
-	      new SorcerServiceDescriptor(
-			  ${provider.codebase},
-		      policy,
-			  ${provider.classpath},
-		      "sorcer.core.provider.ServiceTasker",
-		      new String[] { "classpath:/META-INF/sorcer/HelloWorld.config" }
-	      )
-      };
+	port = 0;
+
+	serviceDescriptors = new ServiceDescriptor[] {
+		/* SORCER Webster, set to serve up root directories */
+		// (String policy, int port, String[] roots)
+		SorcerDescriptorUtil.getWebster(policy, port, new String[] { SorcerEnv.getRepoDir() }),
+
+		new SorcerServiceDescriptor(
+			Resolver.resolveCodeBase(
+				new ArtifactCoordinates[]{
+					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-api:1.0-SNAPSHOT"),
+					Artifact.getSosPlatform()
+				}
+			),
+			policy,
+			Resolver.resolveClassPath(
+				new ArtifactCoordinates[]{
+					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-api:1.0-SNAPSHOT"),
+					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-prv:1.0-SNAPSHOT")
+				}
+			),
+			"sorcer.core.provider.ServiceTasker",
+			new String[] { "classpath:/META-INF/sorcer/HelloWorld.config" }
+		)
+	};
 }
