--- a/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/META-INF/sorcer/services.config
@@ -1,36 +1,39 @@
 import java.net.URL;
 import com.sun.jini.start.ServiceDescriptor;
-import com.sun.jini.config.ConfigUtil;
-import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
+import sorcer.core.SorcerEnv;
+import sorcer.resolver.Resolver;
+import sorcer.util.Artifact;
 import sorcer.util.ArtifactCoordinates;
 
 com.sun.jini.start {
-	home = "${iGrid.home}";
+	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
-	ps = System.getProperty("path.separator");
-	
-	// webster root directories
-	jiniLibPath 	= home + "/lib/river/lib";
-	jiniLibDLPath 	= home + "/lib/river/lib-dl";
-	repo 			= "${user.home}/.m2/repository/";
-	port = 0;
-	
-	serviceDescriptors = new ServiceDescriptor[] {
-	      /* SORCER Webster, set to serve up root directories */
-	      // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-	      SorcerDescriptorUtil.getWebster(policy, port,
-					      new String[] { repo,
-							      jiniLibDLPath,
-							      jiniLibPath,
-							      }),
 
-	          ${provider.codebase},
-		  	  policy,
-		      ${provider.classpath},
-		      "sorcer.core.provider.ServiceTasker",
-		      new String[] { "classpath:/META-INF/sorcer/${providerInterface}.config" }
-	      )
-      };
+	port = 0;
+
+	serviceDescriptors = new ServiceDescriptor[] {
+		/* SORCER Webster, set to serve up root directories */
+		// (String policy, int port, String[] roots)
+		SorcerDescriptorUtil.getWebster(policy, port, new String[] { SorcerEnv.getRepoDir() }),
+
+		new SorcerServiceDescriptor(
+			Resolver.resolveCodeBase(
+				new ArtifactCoordinates[]{
+					ArtifactCoordinates.coords("${groupId}:${rootArtifactId}-api:${version}"),
+					Artifact.getSosPlatform()
+				}
+			),
+			policy,
+			Resolver.resolveClassPath(
+				new ArtifactCoordinates[]{
+					ArtifactCoordinates.coords("${groupId}:${rootArtifactId}-api:${version}"),
+					ArtifactCoordinates.coords("${groupId}:${rootArtifactId}-prv:${version}")
+				}
+			),
+			"sorcer.core.provider.ServiceTasker",
+			new String[] { "classpath:/META-INF/sorcer/${providerInterface}.config" }
+		)
+	};
 }
