--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/services.config
@@ -1,47 +1,40 @@
 import java.net.URL;
 import com.sun.jini.start.ServiceDescriptor;
-import com.sun.jini.config.ConfigUtil;
-import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.util.ArtifactCoordinates;
 import sorcer.core.SorcerEnv;
+import sorcer.resolver.Resolver;
+import sorcer.util.Artifact;
+import sorcer.util.ArtifactCoordinates;
 
 com.sun.jini.start {
-	home = "${iGrid.home}";
+	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
 	ps = System.getProperty("path.separator");
-	
-	// webster root directories
-	jiniLibPath 	= home + "/lib/river/lib";
-	jiniLibDLPath 	= home + "/lib/river/lib-dl";
-	repo 			 = SorcerEnv.getRepoDir() + "/";
-	port = 0;
-	
-	serviceDescriptors = new ServiceDescriptor[] {
-	      /* SORCER Webster, set to serve up root directories */
-	      // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-	      SorcerDescriptorUtil.getWebster(policy, port,
-					      new String[] { repo,
-							      jiniLibDLPath,
-							      jiniLibPath,
-							      }),
 
-	      new SorcerServiceDescriptor(
-<<<<<<< .roboczy
-			      ""+new ArtifactCoordinates("org.sorcersoft.sorcer","first-api","1.0-SNAPSHOT")
- 			     +" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sos-platform","11.1"),
-=======
-			      "${provider.codebase}",
->>>>>>> .merge-prawo.w290
-		  policy,
-		  ConfigUtil.concat(new Object[] {
-		      repo, new ArtifactCoordinates("org.sorcersoft.sorcer","first-api","1.0-SNAPSHOT"), ps,
-		      repo, new ArtifactCoordinates("org.sorcersoft.sorcer","first-prv","1.0-SNAPSHOT"), ps
-		      //repo, 
-		  }),
-		      "sorcer.core.provider.ServiceTasker",
-		      new String[] { "classpath:/META-INF/sorcer/HelloWorld.config" }
-	      )
-      };
+	port = 0;
+
+	serviceDescriptors = new ServiceDescriptor[] {
+		/* SORCER Webster, set to serve up root directories */
+		// (String policy, int port, String[] roots)
+		SorcerDescriptorUtil.getWebster(policy, port, new String[] { SorcerEnv.getRepoDir() }),
+
+		new SorcerServiceDescriptor(
+			Resolver.resolveCodeBase(
+				new ArtifactCoordinates[]{
+					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-api:1.0-SNAPSHOT"),
+					Artifact.getSosPlatform()
+				}
+			),
+			policy,
+			Resolver.resolveClassPath(
+				new ArtifactCoordinates[]{
+					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-api:1.0-SNAPSHOT"),
+					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-prv:1.0-SNAPSHOT")
+				}
+			),
+			"sorcer.core.provider.ServiceTasker",
+			new String[] { "classpath:/META-INF/sorcer/HelloWorld.config" }
+		)
+	};
 }
